[gd_scene load_steps=14 format=3 uid="uid://beomjxt8pol7e"]

[ext_resource type="Texture2D" uid="uid://blylwira33qer" path="res://Sprites/evil-Sheet.png" id="1_0urj3"]
[ext_resource type="Script" uid="uid://n44j86du7lg6" path="res://Scripts/evil.gd" id="1_nw6l1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_irwgg"]
atlas = ExtResource("1_0urj3")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvxua"]
atlas = ExtResource("1_0urj3")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_blrne"]
atlas = ExtResource("1_0urj3")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_3opw3"]
atlas = ExtResource("1_0urj3")
region = Rect2(90, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_a84m2"]
atlas = ExtResource("1_0urj3")
region = Rect2(120, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_op24p"]
atlas = ExtResource("1_0urj3")
region = Rect2(150, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2l5e"]
atlas = ExtResource("1_0urj3")
region = Rect2(180, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qn2c"]
atlas = ExtResource("1_0urj3")
region = Rect2(210, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjhdi"]
atlas = ExtResource("1_0urj3")
region = Rect2(240, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_eufn3"]
atlas = ExtResource("1_0urj3")
region = Rect2(270, 0, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_a84m2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_irwgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvxua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blrne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3opw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a84m2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op24p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2l5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qn2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjhdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eufn3")
}],
"loop": true,
"name": &"new_animation",
"speed": 2.0
}]

[node name="Evil" type="Area2D"]
show_behind_parent = true
top_level = true
collision_layer = 8
script = ExtResource("1_nw6l1")

[node name="TopConeCollider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 0, -82, -85, 82, -84)

[node name="BottomConeCollider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 0, -75, 74, 72, 74)

[node name="Sprites" type="Node2D" parent="."]

[node name="TopConeSprite" type="Polygon2D" parent="Sprites"]
z_index = -2
polygon = PackedVector2Array(0, -1, -81, -85, 81, -84)

[node name="BottomConeSprite" type="Polygon2D" parent="Sprites"]
z_index = -2
polygon = PackedVector2Array(0, -1, -81, -85, 81, -84)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprites"]
sprite_frames = SubResource("SpriteFrames_a84m2")
animation = &"new_animation"
autoplay = "new_animation"

[node name="Timer" type="Timer" parent="."]
